--- a/method.html
+++ b/method.html
@@ -11,7 +11,7 @@
         body {
             background-color: #FFFFF0; /* Ivory */
             color: black;
-            font-family: 'Chivo Mono', monospace;
+            font-family: 'Newsreader', monospace;
             font-size: 16pt;
             padding: 40px;
             max-width: 800px;
@@ -50,15 +50,15 @@
     <h2>Method: The Meaning Of Our Numbers</h2>
 
     <div class="content-section">
-        <strong>“Climate Variability”</strong> = The Premier Office uses the measure of entropy found in the academic field of Information Theory to calculate the variability of weather conditions for each of the regions covered in our reports. This Information Entropy is a single number that tells us precisely how variable or consistent the weather in a wine region manifests throughout the year. Entropy is a valuable tool in calculating and communicating the impact of climate change within wine regions because it compresses thousands of daily readings into one easily understandable number. A higher entropy value means more variability has occurred in a region’s weather conditions. A lower entropy value means more steady and predictable conditions have been recorded for that particular region. Entropy totals are communicated in a measurement known as “bits”. A bit is simply Information Theory’s method of expressing whether or not something exists, in our particular case the thing which exists is variability of weather conditions experienced by a particular wine region. More bits in the “Climate Variability” totals contained in our reports mean that more unique weather measurements have been taken that are increasingly detached from long-term climate averages for the region.
+        “Atmospheric Disorder Index” = The Premier Office uses the measure of entropy found in the academic field of Information Theory to calculate the variability of weather conditions for each of the regions covered in our reports. This Information Entropy is a single number that tells us precisely how variable or consistent the weather in a wine region manifests throughout the year. Entropy is a valuable tool in calculating and communicating the impact of climate change within wine regions because it compresses thousands of daily readings into one easily understandable number. A higher entropy value means more variability has occurred in a region’s weather conditions. A lower entropy value means more steady and predictable conditions have been recorded for that particular region. Entropy totals are communicated in a measurement known as “bits”. A bit is simply Information Theory’s method of expressing whether or not something exists, in our particular case the thing which exists is variability of weather conditions experienced by a particular wine region. More bits in the “Atmospheric Disorder Index” totals contained in our reports mean that more unique weather measurements have been taken that are increasingly detached from long-term climate averages for the region.
     </div>
 
     <div class="content-section">
-        <strong>“Primary Driver”</strong> = The Premier Office analyzes numerous weather measurements for every region that we cover. The weather measurement that shows the highest individual value of entropy among the ensemble of all the measurements analyzed is what we term the “Primary Driver”. Not only do we tell you the weather measurement providing the highest amount of variability in a wine region, we also report the percentage of total entropy that the “Primary Driver” occupies within the total entropy as “XX% share”.
+        “Primary Driver” = The Premier Office analyzes numerous weather measurements for every region that we cover. The weather measurement that shows the highest individual value of entropy among the ensemble of all the measurements analyzed is what we term the “Primary Driver”. Not only do we tell you the weather measurement providing the highest amount of disorder in a wine region, we also report the percentage of total entropy that the “Primary Driver” occupies within the total entropy as “XX% share”.
     </div>
 
     <div class="content-section">
-        <strong>“Month to Month Change”</strong> = This is the difference between the “Climate Variability” total for the most recent month compared to the month prior, and the resulting value is paired with the “up” or “down” direction that the annual “Climate Variability” total is trending for the wine region undergoing focused analysis.
+        “Month to Month Change” = This is the difference between the “Atmospheric Disorder Index” value for the most recent month compared to the month prior, and the resulting value is paired with the “up” or “down” direction that the annual “Climate Variability” total is trending for the wine region undergoing focused analysis.
     </div>
 
 </body>
