--- a/method.html
+++ b/method.html
@@ -47,7 +47,7 @@
         <a href="preview.html">Harvest Report Preview</a>
     </nav>
 
-    <h2>Method: The Meaning Of Our Numbers</h2>
+    <p>Method: The Meaning Of Our Numbers</p>
 
     <div class="content-section">
         “Atmospheric Disorder Index” = The Premier Office uses the measure of entropy found in the academic field of Information Theory to calculate the variability of weather conditions for each of the regions covered in our reports. This Information Entropy is a single number that tells us precisely how variable or consistent the weather in a wine region manifests throughout the year. Entropy is a valuable tool in calculating and communicating the impact of climate change within wine regions because it compresses thousands of daily readings into one easily understandable number. A higher entropy value means more variability has occurred in a region’s weather conditions. A lower entropy value means more steady and predictable conditions have been recorded for that particular region. Entropy totals are communicated in a measurement known as “bits”. A bit is simply Information Theory’s method of expressing whether or not something exists, in our particular case the thing which exists is variability of weather conditions experienced by a particular wine region. More bits in the “Atmospheric Disorder Index” totals contained in our reports mean that more unique weather measurements have been taken that are increasingly detached from long-term climate averages for the region.
