--- a/preview.html
+++ b/preview.html
@@ -11,7 +11,7 @@
         body {
             background-color: #FFFFF0; /* Ivory */
             color: black;
-            font-family: 'Chivo Mono', monospace;
+            font-family: 'Newsreader', monospace;
             font-size: 16pt;
             padding: 40px;
             max-width: 800px;
