--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         .content-feed-container {
             display: flex;
             justify-content: center;
-            padding-top: 300px;
+            padding-top: 200px;
         }
         .content-feed {
-            width: 400px;
+            width: 600px;
             height: 200px;
             overflow-y: scroll;
             font-size: 14pt;
@@ -72,7 +72,7 @@
         }
         .footer-logo {
             text-align: center;
-            margin-top: 80px; /* Moved 80px below feed */
+            margin-top: 100px; /* Moved 80px below feed */
             font-size: 34px;   /* Kept original logo size */
             color: black;      /* Set color to black */
         }
@@ -129,7 +129,7 @@
         </div>
     </div>
 
-    <div class="logo">▲🌐▼</div>
+    <div class="footer-logo">▲🌐▼</div>
     
     <script src="mcp_rpc_search.js"></script>
 </body>
